PRODEV-1566. Fix filters on mobile

--- a/src/components/RideTo/Account/DashboardPageV2/News/Filters/styles.scss
+++ b/src/components/RideTo/Account/DashboardPageV2/News/Filters/styles.scss
@@ -1,14 +1,24 @@
 .list {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
   list-style: none;
   margin-bottom: -0.5rem;
+
+  @media (min-width: 600px) {
+    flex-wrap: none;
+  }
 }
 
 .listItem {
   display: block;
+  width: 50%;
+
+  @media (min-width: 600px) {
+    width: auto;
+  }
 }
 
 .filterButton {
